# github-actions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
scripts/: versioning.py
src/utilities/: __init__.py  __main__.py
tests/: test_utilities.py
