[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Michael Statt <michael.statt@modelyst.io>"]
description = ""
name = "modelyst-utilities"
repository = "https://github.com/statt8900/github-actions"
version = "0.0.2"

[[tool.poetry.packages]]
from = "src"
include = "utilities"

[tool.poetry.dependencies]
pre-commit = "^2.17.0"
python = ">=3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pydocstyle = "^6.1.1"
pytest = "^7.0.0"
